add minified bundle to browser build
...so one can easily confirm how large the minified version is compared to the
full bundle. Right now, the sizes are:

408195 fullnode.js
245808 fullnode-min.js
642255 tests.js

--- a/browser/build
+++ b/browser/build
@@ -1,4 +1,5 @@
 #!/bin/bash
 
 browserify index.js -o browser/fullnode.js
+browserify -g uglifyify index.js -o browser/fullnode-min.js
 ls test/*.js | xargs browserify -o browser/tests.js
