--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "chai": "~1.9.1",
     "mocha": "~1.21.0",
     "browserify": "~5.9.1",
-    "uglifyify": "~2.6.0"
+    "uglifyify": "~2.6.0",
+    "groc": "~0.7.0"
   },
   "license": "MIT"
 }
