allow brower build to work from any directory
Previously the "build" script could only be ran from the project root without
issues. Now it is smart enough to be run from any directory.

--- a/browser/build
+++ b/browser/build
@@ -1,5 +1,7 @@
-#!/bin/sh
+#!/bin/bash
 
+cd `dirname "${BASH_SOURCE[0]}"`
+cd ..
 browserify index.js -o browser/fullnode.js
 browserify -g uglifyify index.js -o browser/fullnode-min.js
 ls test/*.js | xargs browserify -o browser/tests.js
