replace PBKDF2 with faster alternative
Use pbkdf2-compat which is much faster than my PBKDF2 function. Also update the
dependencies to remove the sha512 package and add the pbkdf2-compat package.

Thanks @jprichardson for the great suggestion.

--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "bs58": "=1.2.1",
     "elliptic": "=0.15.13",
     "hash.js": "=0.3.1",
-    "sha512": "=0.0.1"
+    "pbkdf2-compat": "=2.0.1"
   },
   "devDependencies": {
     "chai": "~1.9.1",
