--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fullnode",
-  "version": "0.0.4",
-  "description": "Bitcoin library, CLI and API.",
+  "version": "0.0.5",
+  "description": "Bitcoin library.",
   "author": "Ryan X. Charles <ryanxcharles@gmail.com>",
   "main": "index.js",
   "scripts": {
