--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Ryan X. Charles <ryanxcharles@gmail.com>",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --recursive"
   },
   "contributors": [
     {
