--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fullnode",
   "version": "0.1.0",
-  "description": "Bitcoin library.",
+  "description": "Javascript bitcoin library.",
   "author": "Ryan X. Charles <ryanxcharles@gmail.com>",
   "main": "index.js",
   "scripts": {
