fix build; and use "npm build"
The browser build was recently broken due to the Message -> BSM change. That is
now fixed. Additionally, we migrate away from the "browser/build" script, and
instead place all that logic into the "npm run build" command.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Ryan X. Charles <ryanxcharles@gmail.com>",
   "main": "index.js",
   "scripts": {
-    "test": "istanbul cover _mocha -- --recursive"
+    "test": "istanbul cover _mocha -- --recursive",
+    "build": "browserify index.js -o browser/fullnode.js && browserify -g uglifyify index.js -o browser/fullnode-min.js && find test/ -type f -name \"*.js\" | xargs browserify -o browser/tests.js"
   },
   "contributors": [
     {
