--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "author": "Ryan X. Charles <ryanxcharles@gmail.com>",
   "main": "index.js",
   "scripts": {
-    "test": "istanbul cover _mocha -- --recursive",
-    "build": "browserify index.js -o browser/fullnode.js && browserify -g uglifyify index.js -o browser/fullnode-min.js && find test/ -type f -name \"*.js\" | xargs browserify -o browser/tests.js"
+    "test": "istanbul cover _mocha -- --recursive"
   },
   "contributors": [
     {
