--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "bs58": "=1.2.1",
     "elliptic": "=0.16.0",
     "hash.js": "=0.3.2",
-    "pbkdf2-compat": "=2.0.1"
+    "pbkdf2-compat": "=2.0.1",
+    "unorm": "=1.3.3"
   },
   "devDependencies": {
     "browserify": "~8.0.3",
