--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "assert": "^1.1.2",
     "coveralls": "^2.11.2",
     "istanbul": "^0.3.5",
-    "mocha": "^2.0.1"
+    "mocha": "^2.0.1",
+    "chai": "~1.10.0"
   },
   "dependencies": {
     "aes": "^0.1.0",
