--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha",
-    "coverage": "istanbul cover _mocha"
+    "lint": "gulp lint",
+    "test": "gulp test",
+    "coverage": "gulp coverage",
+    "build": "gulp",
+    "postinstall": "node ./lib/errors/build.js"
   },
   "repository": {
     "type": "git",
@@ -30,13 +33,15 @@
   "homepage": "https://github.com/bitpay/bitcore-ecies",
   "devDependencies": {
     "assert": "^1.1.2",
+    "chai": "~1.10.0",
     "coveralls": "^2.11.2",
+    "gulp": "^3.8.10",
+    "gulp-bitcore": "^0.1.0",
     "istanbul": "^0.3.5",
-    "mocha": "^2.0.1",
-    "chai": "~1.10.0"
+    "mocha": "^2.0.1"
   },
   "dependencies": {
     "aes": "^0.1.0",
-    "bitcore": "git://github.com/bitpay/bitcore#v0.8"
+    "bitcore": "=0.8.6"
   }
 }
