--- a/package.json
+++ b/package.json
@@ -32,15 +32,26 @@
   "homepage": "https://github.com/bitpay/bitcore-ecies",
   "devDependencies": {
     "assert": "^1.1.2",
+    "brfs": "^1.2.0",
+    "browserify": "^8.1.0",
     "chai": "~1.10.0",
     "coveralls": "^2.11.2",
     "gulp": "^3.8.10",
     "gulp-bitcore": "^0.3.0",
     "istanbul": "^0.3.5",
+    "karma": "^0.12.31",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-detect-browsers": "^0.1.3",
+    "karma-firefox-launcher": "^0.1.4",
+    "karma-ie-launcher": "^0.1.5",
+    "karma-mocha": "^0.1.10",
+    "karma-opera-launcher": "^0.1.0",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-safari-launcher": "^0.1.1",
     "mocha": "^2.0.1"
   },
   "dependencies": {
     "aes": "^0.1.0",
-    "bitcore": "^0.8.6"
+    "bitcore": "^0.8.7"
   }
 }
