--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "chai": "~1.10.0",
     "coveralls": "^2.11.2",
     "gulp": "^3.8.10",
-    "gulp-bitcore": "^0.3.0",
+    "gulp-bitcore": "git://github.com/bitpay/gulp-bitcore.git",
     "istanbul": "^0.3.5",
     "karma": "^0.12.31",
     "karma-chrome-launcher": "^0.1.7",
