--- a/package.json
+++ b/package.json
@@ -32,17 +32,14 @@
   "homepage": "https://github.com/bitpay/bitcore-ecies",
   "devDependencies": {
     "assert": "^1.1.2",
+    "bitcore-build": "^0.5.0",
     "brfs": "^1.2.0",
     "browserify": "^8.1.0",
     "chai": "~1.10.0",
-    "coveralls": "^2.11.2",
-    "gulp": "^3.8.10",
-    "bitcore-build": "^0.4.1",
-    "istanbul": "^0.3.5",
-    "mocha": "^2.0.1"
+    "gulp": "^3.8.10"
   },
   "dependencies": {
     "aes": "^0.1.0",
-    "bitcore": "git://github.com/bitpay/bitcore"
+    "bitcore": "^0.9.0"
   }
 }
